# ai-tracker

./: Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build-deploy.yml
app/: main.py
app/bot/: bot.py
app/bot/callbacks/: ai.py  backlog.py  menu.py  stats.py  tasks.py
app/bot/handlers/ai/: ai.py
app/bot/handlers/menu/: menu.py
app/bot/handlers/stats/: stats.py
app/bot/handlers/tasks/: tasks.py
app/bot/handlers/timers/: timers.py
app/bot/keyboards/: ai.py  backlog.py  menu.py  stats.py  tasks.py
app/bot/middlewares/: user_middleware.py
app/bot/states/: tasks.py
app/core/: config.py  constants.py  logger.py  redis.py  scheduler.py
app/db/: config.py  init.py
app/db/models/: active_timer.py  task.py  user.py
app/services/: ai_prompts.py  ai_service.py  backlog_service.py  motivation_messages.json  motivation_service.py  stats_service.py  tasks_service.py  timers_service.py  user_service.py
app/workers/: cron_worker.py  timers_worker.py
